# haskell-programming-book

./: .gitignore  README.md
chapter02.hsproj/: .uuid  FunctionWithLet.hs  FunctionWithWhere.hs  Learn.hs  _FunctionWithLet.hsplay  _Learn.hsplay  chapter02.cabal
chapter03.hsproj/: .uuid  Print1.hs  Print2.hs  Print3.hs  Print3Flipped.hs  TopOrLocal.hs  _ListFunctions.hsplay  _TopOrLocal.hsplay  chapter03.cabal
chapter04.hsproj/: .uuid  GreetIfCool1.hs  GreetIfCool2.hs  Types.hs  Untitled.cabal  _GreetIfCool1.hsplay  _Lists.hsplay  _Tuples.hsplay  _Types.hsplay
chapter05.hsproj/: .uuid  Currying.hs  TypeInference1.hs  TypeInference2.hs  Types.hs  _Currying.hsplay  _Polymorphism.hsplay  _TypeInference1.hsplay  _TypeInference2.hsplay  _Types.hsplay  chapte05.cabal
chapter06.hsproj/: .uuid  Equality.hs  Numbers.hs  Order.hs  Showing.hs  Types.hs  _Equality.hsplay  _Numbers.hsplay  _Order.hsplay  _Showing.hsplay  _Types.hsplay  chapter06.cabal
chapter07.hsproj/: .uuid  CaseExpression.hs  FunctionComposition.hs  Guards.hs  HighOrderFunctions.hs  PatternMatching.hs  PointFree.hs  _CaseExpression.hsplay  _FunctionComposition.hsplay  _Guards.hsplay  _HighOrderFunctions.hsplay  _Lambdas.hsplay  _PatternMatching.hsplay  _PointFree.hsplay  chapter07.cabal
chapter08.hsproj/: .uuid  Bottom.hs  Recursion.hs  _Bottom.hsplay  _Recursion.hsplay  chapter08.cabal
chapter09.hsproj/: .uuid  Lists.hs  _Lists.hsplay  chapter09.cabal
chapter10.hsproj/: .uuid  Folding.hs  _Folding.hsplay  chapter10.cabal
chapter11.hsproj/: .uuid  BinaryTree.hs  Chapter11.hs  Deconstruct.hs  NormalForm.hs  Types.hs  _Chapter11.hsplay  _Deconstruct.hsplay  _Types.hsplay  chapter11.cabal
chapter12.hsproj/: .uuid  Chapter12.hs  EqCaseGuard.hs  _Chapter12.hsplay  _EqCaseGuard.hsplay  chapter12.cabal
chapter13/hangman/: hangman.cabal
chapter13/hangman/src/: Main.hs
chapter13/hello/: .gitignore  ghci-no-prelude  hello.cabal
chapter13/hello/exe/: Main.hs
chapter13/hello/src/: Hello.hs
chapter14/addition/: Addition.hs
chapter14/exercise/: WordNumberTest.hs
chapter15.hsproj/: .uuid  Chapter15.hs  Optional.hs  Semigroup.hs  Validation.hs  _Chapter15.hsplay  _Optional.hsplay  _Semigroup.hsplay  _Validation.hsplay  chapter15.cabal
chapter16.hsproj/: .uuid  Chapter16.hs  MaybeFunctor.hs  Quickcheck.hs  _Chapter16.hsplay  _Quickcheck.hsplay  chapter16.cabal
chapter17.hsproj/: .uuid  Apl1.hs  Chapter17.hs  Laws.hs  MaybeApplicative.hs  _Apl1.hsplay  _Chapter17.hsplay  _Laws.hsplay  _MaybeApplicative.hsplay  chapter17.cabal
chapter18.hsproj/: .uuid  BadMonad.hs  Chapter18.hs  EitherMonad.hs  Examples.hs  MonadComposition.hs  _BadMonad.hsplay  _Chapter18.hsplay  _EitherMonad.hsplay  _Examples.hsplay  chapter18.cabal
chapter19.hsproj/: .uuid  ApplyingApplicative.hs  ApplyingFunctor.hs  ApplyingMonad.hs  ApplyingMonoid.hs  Chapter19.hs  _ApplyingApplicative.hsplay  _ApplyingFunctor.hsplay  _ApplyingMonoid.hsplay  chapter19.cabal
chapter19/shawty/: dump.rdb
chapter20.hsproj/: .uuid  Chapter20.hs  _Chapter20.hsplay  chapter20.cabal
chapter21.hsproj/: .uuid  Chapter21.hs  EitherTraversable.hs  HttpStuff.hs  _Chapter21.hsplay  _HttpStuff.hsplay  chapter21.cabal
chapter22.hsproj/: .uuid  Chapter22.hs  PrettyReader.hs  ReaderAppicative.hs  _Chapter22.hsplay  chapter22.cabal
chapter23.hsproj/: .uuid  Chapter23.hs  FizzBuzz.hs  RandomExample.hs  _Chapter23.hsplay  _FizzBuzz.hsplay  _RandomExample.hsplay  chapter23.cabal
chapter24.hsproj/: .uuid  AltParsing.hs  Chapter24.hs  IniParser.hs  Quasimodo.hs  TextFractions.hs  _Chapter24.hsplay  _IniParser.hsplay  _TextFractions.hsplay  chapter24.cabal
