name: chapter11
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable chapter11
  main-is: Chapter11.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Types
      BinaryTree
      NormalForm
      Deconstruct
