name: chapter23
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable chapter23
  main-is: Chapter23.hs
  buildable: True
  build-depends:
      base -any,
      random -any,
      dlist -any,
      transformers -any
  other-modules:
      RandomExample
      FizzBuzz
